<resources>
    <string name="app_name">RTO</string>
    <string name="exam">Exam</string>
    <string name="tab2">Tab2</string>
    <string name="todo">TODO</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="question_bank">Question Bank</string>
    <string name="practice">Practice</string>
    <string name="driving_schools">Driving Schools</string>
    <string name="settings_amp_help"><![CDATA[Settings & Help]]></string>
    <string name="list_of_questions_amp_answers_and_meaning_of_road_signs" translatable="false"><![CDATA[List of questions & answers and meaning of road signs]]></string>
    <string name="test_your_knowledge_without_worrying_about_time">Test your knowledge without worrying about time</string>
    <string name="time_and_question_bound_test_exactly_same_as_actual_rto_test" translatable="false">Time and question bound test exactly same as actual RTO test</string>
    <string name="search_and_connect_with_driving_schools_around_you" translatable="false">Search and connect with driving schools around you</string>
    <string name="language_selection_forms_rto_office_infromation_and_more" translatable="false">Language selection, forms, RTO office infromation and more</string>
    <string name="Question1">1.Near a pedestrain crossing,when the pedestrians are waiting to cross the road,you should...</string>
    <string name="Question2">2.When vehicle is involved in an accident causing injury to any person...</string>
    <string name="Question3">3.On a road designated as one way...</string>
    <string name="Question4">4.You can overtake a vehicle in front....</string>
    <string name="Question5">5.Wheen a vehicle appriaches an unguarded railway level crossing before crossing it,the driver shall...</string>
    <string name="Question6">6.How can you distinguish a transport vehicle?</string>
    <string name="Question7">7.Validity of learners licebce....</string>
    <string name="Question8">8.In a road without footpath,the pedestrians........</string>
    <string name="ans1" translatable="false">A.Stop the vehicle and wait till the pedestrains cross the road and then proceed</string>
    <string name="ans2" translatable="false">A.Take all reasonable steps to secure medical attention to the injured and report to the nearest police station within 24 hours</string>
    <string name="ans3" translatable="false">A. Should not drivein reverse gear</string>
    <string name="ans4" translatable="false">A.Through the right side of that vehicle</string>
    <string name="ans5" translatable="false">A.Stop the vehicle on the left side of the road, get down from the vehicle, go to the railwat treack,and ensure that no train or trolley is coming from either side</string>
    <string name="ans6" translatable="false">A.By looking at the number plate of the vehicle</string>
    <string name="ans7" translatable="false">A.6 months</string>
    <string name="ans8" translatable="false">A.Should walk on the right side of the road"</string>
    <string name="trafficname1">Stop</string>
    <string name="trafficname2">Give Way</string>
    <string name="trafficname3">No Entry</string>
    <string name="trafficname4">No entry for cars and motorcycles</string>
    <string name="trafficname5">Trucks are Prohibited</string>
    <string name="trafficname6">Bullock cart prohibited</string>
    <string name="trafficname7">First-Aid Post</string>
    <string name="trafficname8">Pedestrians Prohibited</string>
    <string name="trafficname9">Right Trun Prohibited</string>
    <string name="trafficname10">U-Trun Prohibited</string>
    <string name="trafficname11">Maximum Speed Limit</string>
    <string name="trafficname12">No Parking</string>
    <string name="trafficname13">No Stopping and Standing</string>
    <string name="trafficname14">Compulsory Trun Left</string>
    <string name="trafficname15">Compulsory Ahead Only</string>
    <string name="trafficname16">Compulsory Ahead or Trun Right</string>
    <string name="trafficname17">Compulsory ahead or trun left</string>
    <string name="trafficname18">Compulsory Keep Left</string>
    <string name="trafficname19">Compulsory Trun Right</string>
    <string name="trafficname20">Petrol Pump</string>
    <string name="trafficname21">Right Hand Cureve</string>
    <string name="trafficname22">Round About</string>
    <string name="change_state">Change State</string>
    <string name="change_language">Change Language</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="forms">Forms</string>
    <string name="process_of_driving_licence" translatable="false">Process of Driving Licence</string>
    <string name="rto_offices">RTO Offices</string>
    <string name="contact_us">Contact Us</string>
    <string name="add_driving_school">Add Driving School</string>
    <string name="share_app" translatable="false">Share App</string>
    <string name="rate_app">Rate App</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_amp_conditions">Terms &amp; Conditions</string>
    <string name="math_master_brain_quizzes">Math Master - Brain Quizzes</string>
    <string name="a_to_z_converter" translatable="false">A to Z Converter</string>
    <string name="quoted">Quoted</string>
    <string name="share_amp_rate"><![CDATA[Share & Rate]]></string>
    <string name="other_apps" translatable="false">Other Apps</string>
    <string name="name" translatable="false">Name</string>
    <string name="email">Email</string>
    <string name="phone_number_optional" translatable="false">Phone Number(optional)</string>
    <string name="city" translatable="false">City</string>
    <string name="message" translatable="false">Message</string>
    <string name="reset">RESET</string>
    <string name="send">SEND</string>
    <string name="or">OR</string>
    <string name="state" translatable="false">State</string>
    <string name="driving_school_name" translatable="false">Driving School Name</string>
    <string name="address" translatable="false">Address</string>
    <string name="contact_person" translatable="false">Contact Person</string>
    <string name="email_optional" translatable="false">Email(Optional)</string>
    <string name="mobile" translatable="false">Mobile</string>
    <string name="message_optional" translatable="false">Message(Optional)</string>
    <string name="instructions" translatable="false">Instructions</string>
    <string name="subject_like_rules_and_regulations_of_traffic_and_traffic_signage_s_are_inclided_in_the_test" translatable="false">• Subject like Rules and Regulations of traffic, and traffic signage\'s are inclided in the test.</string>
    <string name="_15_questions_are_asked_in_the_at_random_out_of_which_11_question_are_required_to_be_answered_correctiy_to_pass_the_test" translatable="false">• 15 questions are asked in the at random, out of which 11 question are required to be answered correctiy to pass the test.</string>
    <string name="_48_seconds_are_allowed_to_answer_each_question" translatable="false">• 48 seconds are allowed to answer each question.</string>
    <string name="start_exam" translatable="false">START EXAM</string>
    <string name="previous" translatable="false">PREVIOUS</string>
    <string name="next" translatable="false">NEXT</string>
    <string name="next_question" translatable="false">NEXT QUESTION</string>
    <string name="gujrati" translatable="false">gujrati</string>
    <string name="auto" translatable="false">Auto</string>
    <string name="on" translatable="false">On</string>
    <string name="off" translatable="false">off</string>
    <string name="Contact_Us" translatable="false">Contact Us</string>
    <string name="practicequestion1" translatable="false">Q.The mandatory signs giving orders are mostly in....</string>
    <string name="practicequestion2" translatable="false">Q.Which  Sign  denotes  "stop" ?</string>
    <string name="practicequestion3" translatable="false">Q.Which  Sign  denotes  "Compulsory Trun Right" ?</string>
    <string name="practicequestion4" translatable="false">Q.Motor cyclist usually cause hazard by..... </string>
    <string name="practicequestion5" translatable="false">Q.While traveling over motorway at night with other vehicles just ahead,better the switched on lights should be... </string>
    <string name="practicequestion6" translatable="false">Q.This sign represents</string>
    <string name="practicequestion7" translatable="false">Q.Which Sign denotes " Give Way" ?</string>
    <string name="practicequestion8" translatable="false">Q.Motor cyclists usually cause hazard by....</string>
    <string name="ans81" translatable="false">passing very close toyou by driving in the zigzag manner</string>
    <string name="ans82" translatable="false">Speed more than permitted</string>
    <string name="ans83" translatable="false">all of the above</string>
    <string name="practicequestion9" translatable="false">Q.you are driving on a well-lit motorway at night, you must...</string>
    <string name="ans91" translatable="false">use your headlight on high beam</string>
    <string name="ans92" translatable="false">always use your headlight in low beam</string>
    <string name="ans93" translatable="false">always use hazard light</string>
    <string name="ans11" translatable="false">Red/Blue circles</string>
    <string name="ans12" translatable="false">Red Triangles</string>
    <string name="ans13" translatable="false">Base Triangles</string>
    <string name="ans41" translatable="false">passing very close to you by driving in the zigzag manner</string>
    <string name="ans42" translatable="false">Speed more than permitted</string>
    <string name="ans43" translatable="false">All of the above</string>
    <string name="ans51" translatable="false">hazard warning light</string>
    <string name="ans52" translatable="false">low beam headlight</string>
    <string name="ans53" translatable="false">high beam headlight</string>
    <string name="ans61" translatable="false">Stop</string>
    <string name="ans62" translatable="false">No Parking</string>
    <string name="ans63" translatable="false">Hospital ahead</string>
    <string name="QUESTIONS" translatable="false">Questions</string>
    <string name="TRAFFIC_SIGNS" translatable="false">Traffic Signs</string>
    <string name="Forms" translatable="false">" Forms"</string>
    <string name="Process_of_Driving_Licence" translatable="false">"Process_of_Driving_Licence              "</string>
    <string name="this_test_is_only_for_public_awareness_though_all_efforts_have_been_made_to_ensure_the_accurancyof_the_content_the_same_should_not_be_construed_as_a_statement_of_law_or_used_for_any_legal_purposses_this_application_accepts_no_responsibility_in_relation_to_the_accurancy_completeness_usefulness_or_otherwise_ofthe_contents_users_are_advised_to_verify_check_any_information_with_the_transport_department">This test is only for public awareness. THough all Efforts have been made to ensure the accurancyof the content, the same should not be construed as a statement of law or used for any legal purposses. This application accepts no responsibility in relation to the accurancy,completeness, usefulness or otherwise,ofthe contents.Usersare advised to verify/ check any information with the Transport Department.</string>
    <string name="close">Close</string>
</resources>