<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:background="#ECECEC"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="9"
            android:paddingStart="@dimen/_9sdp"
            android:text="@string/dark_mode"
            android:textSize="@dimen/_16sdp"
            android:textColor="@color/black"/>

        <ImageView
            android:layout_width="57px"
            android:layout_height="57px"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:paddingEnd="@dimen/_7sdp"
            android:layout_marginRight="@dimen/_9sdp"
            android:id="@+id/modecancle"
            android:src="@drawable/x">

        </ImageView>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="#DCDCDC"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:id="@+id/ll_auto"
        android:paddingStart="@dimen/_9sdp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/auto"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:id="@+id/auto"
            android:textSize="@dimen/_16sdp">

        </TextView>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="#DCDCDC"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:id="@+id/ll_on"
        android:paddingStart="@dimen/_9sdp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/on"
            android:id="@+id/on"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sdp">

        </TextView>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="#DCDCDC"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:id="@+id/ll_off"
        android:paddingStart="@dimen/_9sdp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/off"
            android:id="@+id/off"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sdp">

        </TextView>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="#DCDCDC"/>
</LinearLayout>