<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddDrivingSchoolActivity">
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/SCREEN"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <include
            android:id="@+id/action_bar"
            layout="@layout/activity_actionbar" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:layout_marginTop="@dimen/_1sdp"
        android:elevation="@dimen/_8sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="@dimen/_8sdp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_13sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            style="@style/SCREEN"
            android:hint="@string/state">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
               style="@style/SCREEN"
                android:inputType="text"

                android:paddingStart="@dimen/_1sdp">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            style="@style/SCREEN"
            android:hint="@string/city">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/SCREEN"
                android:inputType="text"
                android:paddingStart="@dimen/_1sdp">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            style="@style/SCREEN"
            android:hint="@string/driving_school_name">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/SCREEN"
                android:inputType="text"
                android:paddingStart="@dimen/_1sdp">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            style="@style/SCREEN"
            android:hint="@string/address">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/SCREEN"
                android:inputType="text"
                android:paddingStart="@dimen/_1sdp">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            style="@style/SCREEN"
            android:hint="@string/contact_person">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/SCREEN"
                android:inputType="text"
                android:paddingStart="@dimen/_1sdp">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            style="@style/SCREEN"
            android:hint="@string/email_optional">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/SCREEN"
                android:inputType="textEmailAddress"
                android:paddingStart="@dimen/_1sdp">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            style="@style/SCREEN"
            android:hint="@string/mobile">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/SCREEN"
                android:inputType="number"
                android:paddingStart="@dimen/_1sdp">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            style="@style/SCREEN"
            android:lines="6">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/SCREEN"
                android:hint="@string/message_optional"
                android:inputType="textImeMultiLine"
                android:lines="6"
                android:overScrollMode="always"
                android:paddingStart="@dimen/_1sdp"
                android:scrollbarStyle="insideInset"
                android:scrollbars="vertical"
                android:scrollHorizontally="false">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="74dp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/reset"
                android:layout_width="@dimen/_130sdp"
                android:layout_height="@dimen/_45sdp"
                android:background="@drawable/selectorbtnbackground">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:background="@drawable/btncolor"
                    android:text="@string/reset"
                    android:drawableTint="@drawable/selectorbtnbackground"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16sdp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/send"
                android:layout_width="@dimen/_130sdp"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginStart="@dimen/_10sdp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:background="@drawable/btncolor"
                    android:text="@string/send"
                    android:backgroundTint="#FFED52"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16sdp" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </LinearLayout>
    </ScrollView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>