<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExamActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints"
        style="@style/FRAGMENT">

        <include layout="@layout/activity_actionbar"
            android:id="@+id/action_bar"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="360dp"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_8sdp"
                android:layout_marginRight="@dimen/_8sdp"
                android:background="#FDFCFC"
                android:elevation="@dimen/_8sdp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:text="@string/instructions"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_19sdp">

                    </TextView>


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_9sdp"
                        android:text="@string/subject_like_rules_and_regulations_of_traffic_and_traffic_signage_s_are_inclided_in_the_test"
                        android:textColor="#858585"
                        android:textSize="@dimen/_14sdp">

                    </TextView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_9sdp"
                        android:text="@string/_15_questions_are_asked_in_the_at_random_out_of_which_11_question_are_required_to_be_answered_correctiy_to_pass_the_test"
                        android:textSize="@dimen/_14sdp"
                        android:textColor="#858585">

                    </TextView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_9sdp"
                        android:textSize="@dimen/_14sdp"
                        android:text="@string/_48_seconds_are_allowed_to_answer_each_question"
                        android:textColor="#858585">

                    </TextView>

                    <androidx.cardview.widget.CardView

                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginLeft="@dimen/_3sdp"
                        android:layout_marginRight="@dimen/_3sdp"
                        android:backgroundTint="#FFEA34"
                        android:layout_marginBottom="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_16sdp"
                        android:clickable="true"
                        android:elevation="8dp"
                        android:foreground="?android:attr/selectableItemBackground"
                        app:cardCornerRadius="5dp"
                        android:onClick="startexam"
                        tools:ignore="MissingConstraintsl">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/start_exam"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_15sdp"
                            android:textStyle="bold">

                        </TextView>

                    </androidx.cardview.widget.CardView>

                </LinearLayout>
            </androidx.cardview.widget.CardView>


        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>