<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/disclaimer"
            android:textSize="@dimen/_15sdp"
            android:textColor="@color/black"
            android:layout_marginStart="@dimen/_15sdp"
            android:textStyle="bold"
            android:layout_marginBottom="@dimen/_5sdp">

        </TextView>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            tools:ignore="ExtraText">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:id="@+id/disclaimer"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:text="@string/this_test_is_only_for_public_awareness_though_all_efforts_have_been_made_to_ensure_the_accurancyof_the_content_the_same_should_not_be_construed_as_a_statement_of_law_or_used_for_any_legal_purposses_this_application_accepts_no_responsibility_in_relation_to_the_accurancy_completeness_usefulness_or_otherwise_ofthe_contents_users_are_advised_to_verify_check_any_information_with_the_transport_department"
                android:textSize="@dimen/_14sdp"
                android:textColor="@color/black">

            </TextView>
        </ScrollView>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:backgroundTint="@color/white"
            android:text="@string/close"
            android:layout_marginStart="@dimen/_100sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:textSize="@dimen/_15sdp"
            android:id="@+id/close"
          >

        </Button>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>